feat(custom-block): 块只读模式 | Block read-only mode.
https://github.com/Zuoqiu-Yingyi/siyuan-plugin-custom-block/issues/18

--- a/public/i18n/en_US.json
+++ b/public/i18n/en_US.json
@@ -61,6 +61,9 @@
         "custom-block-table-width-equal": {
             "label": "Table - Equally Cells Width"
         },
+        "custom-block-user-modify": {
+            "label": "Read-only Mode"
+        },
         "custom-block-width-full": {
             "label": "Full-width Display"
         },
